ADDITION - Added registration page, form & schema
Also cleaned file and folder structure for organization and readability.

--- a/src/App.css
+++ b/src/App.css
@@ -318,6 +318,12 @@ input {
   margin: 1.2rem 0;
 }
 
+.error {
+  position: absolute;
+  color: red;
+  font-size: 0.6rem;
+}
+
 .form-text {
   display: block;
   margin-top: 0.3rem;
